# mcp-server-for-powerbi

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml
mcp_for_powerbi/: __init__.py  auth_middleware.py  obo_flow.py  server.py  server_http.py
